[package]
name = "rah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
raur = "7.0.0"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
tr = "0.1.7"
users = "0.11.0"
